syntax = "proto3";
package waf_api;

service WafManagement {
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
    rpc StreamLogs(StreamLogsRequest) returns (stream LogEntry);
    rpc GetLogs(GetLogsRequest) returns (GetLogsResponse);
    rpc TestPayload(TestPayloadRequest) returns (TestPayloadResponse);
    rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
    rpc GetRules(GetRulesRequest) returns (GetRulesResponse);
    rpc EnableRule(EnableRuleRequest) returns (EnableRuleResponse);
    rpc DisableRule(DisableRuleRequest) returns (DisableRuleResponse);
    rpc ApplyPolicy(ApplyPolicyRequest) returns (ApplyPolicyResponse);
    rpc SimulatePolicy(SimulatePolicyRequest) returns (SimulatePolicyResponse);

    // Shadow Mode
    rpc EnableShadow(EnableShadowRequest) returns (EnableShadowResponse);
    rpc DisableShadow(DisableShadowRequest) returns (DisableShadowResponse);
    rpc GetShadowStatus(GetShadowStatusRequest) returns (GetShadowStatusResponse);
    rpc GetShadowSummary(GetShadowStatusRequest) returns (GetShadowSummaryResponse);

    // Traffic Replay
    rpc ReplayTraffic(ReplayTrafficRequest) returns (ReplayTrafficResponse);
}

message GetStatusRequest {}

message GetStatusResponse {
    string status = 1;  // "running", "stopped"
    int64 uptime_seconds = 2;
    int32 requests_total = 3;
    int32 requests_blocked = 4;
    string version = 5;
    string current_policy_version = 6;
}

message StreamLogsRequest {
    optional string level_filter = 1;
    optional string request_id_filter = 2;
}

message GetLogsRequest {
    uint32 lines = 1;
    optional string level_filter = 2;
    optional string request_id_filter = 3;
}

message GetLogsResponse {
    repeated LogEntry entries = 1;
}

message LogEntry {
    string timestamp = 1;
    string level = 2;
    string message = 3;
}

message TestPayloadRequest {
    string method = 1;
    string path = 2;
    string payload = 3;
}

message TestPayloadResponse {
    string action = 1;
    int32 crs_score = 2;
    float ml_anomaly_score = 3;
    optional Classification ml_classification = 4;
    int32 combined_score = 5;
    int32 threshold = 6;
    repeated RuleMatch rules_matched = 7;
    string reasoning = 8;
}

message Classification {
    string predicted_class = 1;
    float confidence = 2;
}

message RuleMatch {
    uint32 id = 1;
    string msg = 2;
    int32 score_delta = 3;
}

message GetStatsRequest {
    string range = 1; // "1h", "24h", "7d"
}

message GetStatsResponse {
    uint64 total_requests = 1;
    uint64 allowed_requests = 2;
    uint64 blocked_requests = 3;
    repeated AttackTypeStats top_attack_types = 4;
    repeated IpStats top_blocked_ips = 5;
    uint32 avg_latency_ms = 6;
    uint32 p95_latency_ms = 7;
    uint32 p99_latency_ms = 8;
    repeated float timeline = 9; // For chart
    uint32 max_rps = 10;
}

message AttackTypeStats {
    string name = 1;
    uint64 count = 2;
}

message IpStats {
    string ip = 1;
    uint64 count = 2;
}

message GetRulesRequest {
    optional string category = 1;
    bool show_all = 2;
}

message GetRulesResponse {
    repeated RuleInfo rules = 1;
}

message RuleInfo {
    uint32 id = 1;
    string msg = 2;
    string category = 3;
    bool enabled = 4;
}

message EnableRuleRequest {
    repeated uint32 ids = 1;
}

message EnableRuleResponse {
    bool success = 1;
    string message = 2;
}

message DisableRuleRequest {
    repeated uint32 ids = 1;
}

message DisableRuleResponse {
    bool success = 1;
    string message = 2;
}

message ApplyPolicyRequest {
    string policy_yaml = 1;
    bool dry_run = 2;
}

message ApplyPolicyResponse {
    bool success = 1;
    string message = 2;
    string version = 3;
    repeated string validation_errors = 4;
}

message SimulatePolicyRequest {
    string policy_yaml = 1;
    string time_range = 2; // "24h", "7d"
}

message SimulatePolicyResponse {
    uint64 total_requests = 1;
    uint64 true_positives = 2;
    uint64 true_negatives = 3;
    uint64 new_blocks = 4;
    uint64 new_allows = 5;
    repeated LogEntry new_blocks_examples = 6;
    repeated LogEntry new_allows_examples = 7;
}

message EnableShadowRequest {
    string policy_yaml = 1;
    uint32 percentage = 2;
    optional uint64 duration_seconds = 3;
}

message EnableShadowResponse {
    bool success = 1;
    string message = 2;
}

message DisableShadowRequest {}

message DisableShadowResponse {
    bool success = 1;
}

message GetShadowStatusRequest {}

message GetShadowStatusResponse {
    bool enabled = 1;
    uint32 percentage = 2;
    string policy_version = 3;
    optional uint64 remaining_seconds = 4;
}

message GetShadowSummaryResponse {
    int64 total_shadowed = 1;
    int64 action_diffs = 2;
    int64 new_blocks = 3;
    int64 new_allows = 4;
    double avg_score_delta = 5;
}

message ReplayTrafficRequest {
    string policy_yaml = 1;
    int64 from_timestamp = 2;
    int64 to_timestamp = 3;
}

message ReplayTrafficResponse {
    uint64 total_requests = 1;
    uint64 unchanged = 2;
    uint64 new_blocks = 3;
    uint64 new_allows = 4;
    repeated LogEntry new_blocks_examples = 5;
    repeated LogEntry new_allows_examples = 6;
}
